--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,12 +32,18 @@ body{
     text-align: center;
     color: white;
     background: #017aeb;
-    transform: translate(0,-28%);
+    transform: translate(0,-24%);
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
-    height: 65px;
+    height: 70px;
     font-size: 25px;
+    text-shadow: #545454;
     
+    
+}
+
+.formulario img{
+    transform: translate(0,10px);
 }
 
 
@@ -49,13 +55,12 @@ body{
 }
 
 
-
 .formulario form{
     padding: 0 40px;
 }
+
 form .username{
-    position: relative;
-    margin: 30px 0;
+    margin: 10px 0;
 }
 
 .username label{
@@ -76,8 +81,30 @@ form .username{
     height: 30px;
 }
 
+form .email{
+    margin: 10px 0;
+}
+
+.email label{
+    margin: 0 13px;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.email input{
+    margin: 5px 0;
+    left: 50%;
+    text-indent: 10px;
+    border-radius: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    width: 100%;
+    height: 30px;
+}
+
 form .password{
-    position: relative;
+    
     margin: 10px 0;
 }
 
@@ -110,10 +137,9 @@ form .password{
 }
 
 input[type="submit"]{
-    position: relative;
-    left: 25%;
-    margin: 50px 0;
-    width: 150px;
+   
+    margin: 50px 18.5%;
+    width: 200px;
     height: 50px;
     background: #017aeb;
     border-radius: 30px;
