rutas vistas terminadas
termine las rutas de vistas de paginas
falta el resto

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -85,6 +85,17 @@ header {
     color: #eceff1;
     text-decoration: none;
     margin-left: auto;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+}
+
+.header .usuario img{
+
+    height: 50px;
+
 }
 
 
