--- a/public/css/base.css
+++ b/public/css/base.css
@@ -111,12 +111,17 @@ header {
     background-color: black;
     color: white;
     margin-top: auto;
+    text-align: left;
 }
 
 .footer .copyrigth{
     font-size: 15px;
     height: 90px;
     font-family: 'Instrument Serif', serif;
+}
+
+.footer h3{
+    text-align: left;
 }
 
 
