--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -122,7 +122,7 @@ a img{
    color: red;
 }
 
-.verticalMenu li input{
+.verticalMenu li .logout{
     font-family: League Spartan;
     display: block;
     border: none;
@@ -131,7 +131,7 @@ a img{
 	padding: 15px 15px 15px 15px;
     background-color: #232220;
 }
-.verticalMenu li input:hover{
+.verticalMenu li .logout:hover{
     color: #ababab;
 }
 
