--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -56,7 +56,7 @@ header {
 .header .nav-links li {
     font-family: League Spartan;
     display: inline-block;
-
+    margin-right: 20px;
 
 }
 
@@ -146,9 +146,9 @@ a img{
     position: relative;
     height: 80px;
     background-color:#232220;
-    margin-top: 30px;
+    margin-top: auto;
     text-indent: 15px;
-    margin-bottom: 0;
+    bottom: 0;
 
 
 }
