--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -286,8 +286,13 @@ form .concertName{
     font-size: 12px;
     color: rgba(245, 38, 38, 0.842);
     text-align: center;
+}
 
-
+.confirmMsg{
+    font-family: League Spartan;
+    font-size: 12px;
+    color: #00c787;
+    text-align: center;
 }
 
 .marker{
@@ -312,4 +317,6 @@ form .concertName{
 .button{
     font-family: League Spartan;
 }
+
+
 
