--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -1,14 +1,21 @@
 /* FUENTES */
-@font-face{
-    font-family: Helvetica World;
-    src: url('https://fonts.googleapis.com/css2?family=Arimo&display=swap') format('truetype');
+@font-face {
+    font-family: 'Helvetica World';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-@font-face{
-    font-family: League Spartan;
-    src: url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap') format('truetype');
+@font-face {
+    font-family: 'League Spartan';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
 
 /* HEADER */
 
@@ -37,7 +44,7 @@ header {
 
 
 
-.header .logo {
+.header .headerLogo {
     margin-left: 15px;
     margin-right: 20px;
 }
@@ -63,7 +70,7 @@ header {
 
 
 .header .nav-links a{
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     color: white;
     text-decoration: none;
@@ -80,7 +87,7 @@ a img{
     margin-right: 10px;
     list-style: none;
     align-items: center;
-
+    font-size: 20px;
 
 }
 
@@ -104,6 +111,7 @@ a img{
 }
 
 .verticalMenu{
+
     position: absolute;
 	display: none;
 	list-style: none;
@@ -118,12 +126,11 @@ a img{
 
 }
 
-.verticalMenu li:hover{
-   color: red;
-}
+
 
 .verticalMenu li .logout{
     font-family: League Spartan;
+    font-size: 18px;
     display: block;
     border: none;
 	color: white;
