--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,9 +1,19 @@
 @font-face {
-    font-family: Helvetica World;
-    src: url('https://fonts.googleapis.com/css2?family=Arimo&display=swap') format('truetype');
+    font-family: 'Helvetica World';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-    font-family: League Spartan;
-    src: url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap') format('truetype');
+@font-face {
+    font-family: 'League Spartan';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body{
@@ -37,6 +47,7 @@ body{
 
 }
 
+
 .logo{
     display: flex;
     align-items: center;
@@ -47,6 +58,7 @@ body{
 }
 
 .logoNombre{
+    font-size: 35px;
     margin-left: 5px;
     font-family: League Spartan;
     text-align: center;
@@ -80,7 +92,7 @@ form .name{
 
 .name label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -107,7 +119,7 @@ form .email{
 
 .email label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -131,7 +143,7 @@ form .password{
 
 .password label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -170,7 +182,7 @@ form .password{
 
 
     font-family: League Spartan;
-    font-size: 20px;
+    font-size: 23px;
     text-align: center;
     color: white;
 
@@ -190,7 +202,7 @@ form .price{
 
 .price label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -214,7 +226,7 @@ form .stock{
 
 .stock label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -238,7 +250,7 @@ form .date{
 
 .date label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -263,7 +275,7 @@ form .concertName{
 
 .concertName label{
     margin: 0 13px;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -297,7 +309,7 @@ form .concertName{
 
 .marker{
     position: absolute;
-    transform: translate(415px,-70px);
+    transform: translate(440px,-75px);
 }
 
 .alert{
