--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -25,16 +25,9 @@ body{
     background-color: white;
 }
 
-.forms{
+.forms, .concertForms{
     position: absolute;
-}
-
-.concertForms{
-    position: relative;
-}
-
-.concertForms, .forms{
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 400px;
@@ -44,9 +37,7 @@ body{
     border-style: solid;
     border-color: #d9d9d9;
     margin-bottom: 30px;
-
 }
-
 
 .logo{
     display: flex;
@@ -313,7 +304,11 @@ form .concertName{
 }
 
 .alert{
-    position: absolute;
+    position:absolute;
+}
+
+.footer{
+    position: fixed;
 }
 
 .popupMessage{
