--- a/resources/views/buy.html
+++ b/resources/views/buy.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{{asset('img/MelodyLogo.png')}}">
     <title>Inciar sesión - Melody</title>
-
-    @vite('resources/css/home.css')
+    <link rel="stylesheet" href="../css/home.css">
+    <!-- @vite('resources/css/home.css') -->
 
 <head>
     <meta charset="UTF-8">
@@ -32,16 +31,21 @@
                 <p2>$XX.XXX</p2>
                 <h2>Cantidad de entradas:</h2>
                 <select name="menu2">
-
-                <option selected value="">--Seleccione las entradas--</option>
-                    @for ($i = 1; $i <= $concert->stock; $i++)
-                        <option value="{{ $i }}">{{ $i }}</option>
-                    @endfor
-
-                /select>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                  </select>
             </td>
             <td>
-                <img src="{{asset('img/tickethd.png')}}" class="pago" width="190" height="190" >
+                <img src="{{asset('img/tickethd.png')}}" class="marker" width="25" height="6">
             </td>
    
         </table>
@@ -68,13 +72,13 @@
             <table align="center">
                 <td>
                 <button class="metodoPago">
-                <img src="{{asset('img/tarjetaCredito.png')}}" class="pago" width="30" height="30">
+                <img src="{{asset('img/credito.png')}}" class="pago" width="30" height="30">
                 <p >Tarjeta de Credito</p>
                 </button>
                 </td>
                 <td>
                 <button class="metodoPago">
-                <img src="{{asset('img/tarjetaDebito.png')}}" class="pago" width="30" height="30">
+                <img src="{{asset('img/debito.png')}}" class="pago" width="30" height="30">
                 <p >Tarjeta de Debito</p>
                 </button>
                 </td>
@@ -88,50 +92,4 @@
 
 
 </body>
-</html>
-
-<!-- <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{{asset('img/MelodyLogo.png')}}">
-    <title>Inciar sesión - Melody</title>
-
-    @vite('resources/css/form.css')
-</head>
-<body>
-    <div class="forms">
-        <div class="logo">
-            <img src="{{asset('img/MelodyLogo.png')}}" class ="img" width="45" height="45">
-            <h1 class="logoNombre">Melody</h1>
-        </div>
-        <p>¡Inicia sesión!</p>
-        <form action="{{route('login')}}" method="POST" novalidate>
-            @csrf
-            @if (session('message'))
-            <div class="errorMsg"><p>{{session('message')}}</p></div>
-            @endif
-            <div class="name">
-                <div><label>CORREO ELECTRÓNICO</label></div>
-                <input id="email" name="email" type="text">
-                @error('email')
-                <div class="errorMsg"><p>{{ $message }}</p></div>
-                @enderror
-            </div>
-            <div class="password">
-                <div><label>CONTRASEÑA</label></div>
-                <input id="password" name="password" type="password">
-                @error('password')
-                <div class="errorMsg"><p>{{ $message }}</p></div>
-                @enderror
-            </div>
-            <div class="register"><a href="{{route('register')}}">¿No tienes cuenta? ¡Registrate aquí!</a></div>
-            <input type="submit" value="INGRESAR" class="store">
-        </form>
-
-    </div>
-</body>
-</html> -->
-
+</html> 
