--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -46,14 +46,58 @@
     font-size: 20px;
 }
 
-
 .container {
     justify-content: center;
-    display: grid;
-    grid-template-columns: auto auto auto;
+    align-items: center;
     gap: 100px;
     margin-top: 40px;
+    text-align: center;
 }
+.containerCompraGen {
+    justify-content: center;
+    text-align: center;
+    width: 370px;
+    height: auto;
+    border-radius: 15px;
+    border: 1px solid #d9d9d9;
+    margin: 20px auto;
+
+}
+h1{
+    margin-top: 30px;
+    font-family: League Spartan;
+    text-align: center;
+    font-size: 30px;
+}
+h2{
+    margin-top: 15px;
+    font-family: League Spartan;
+    text-align: left;
+    font-size: 15px;
+
+}
+p2{
+    margin: left;
+    text-align: left;
+    font-size: 10px;
+
+}
+.containerCompra{
+    justify-content: center;
+    text-align: center;
+    width: 250px;
+    height: 210px;
+    border-radius: 15px;
+    border: 1px solid #d9d9d9;
+    margin: 20px auto;
+
+}
+table{
+    /*
+    justify-content:;
+    text-align: center;*/
+}
+
 .container .content {
 
     background-color: white;
@@ -61,13 +105,44 @@
     font-size: 25px;
     width: 400px;
     height: 400px;
+
 }
+.metodoPago{
+    text-align: center;
+    justify-content: center;
+    border-radius: 15px;
+    border: 1px solid #d9d9d9;
+    margin: 5px;
+    height: 70px;
+    width: 100px;
+    background-color: transparent;
+
+}
+.metodoPago:focus{
+    background-color: transparent;
+    border-color: #009e6c;
+}
+.metodoPago.buttonBuy:hover{
+    border-color: #009e6c;
+}
+
+ul{
+    justify-content: center;
+    text-align: center;
+}
+p{
+    margin: auto;
+    font-size: 10px;
+}
+
+
 .buttonBuy {
-    margin-top: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-family: League Spartan;
     display: inline-block;
-    padding: 15px 25px;
-    font-size: 30px;
+    padding: 15px 15px;
+    font-size: 25px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
