Req Comprar Concierto
Co-Authored-By: Victor Araya <112587750+VitokoUcn@users.noreply.github.com>

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -48,10 +48,10 @@
 
 .container {
     justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto auto;
     gap: 100px;
     margin-top: 40px;
-    text-align: center;
 }
 .containerCompraGen {
     justify-content: center;
