--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -59,7 +59,7 @@
     justify-content: center;
     text-align: center;
     width: 500px;
-    height: 680px;
+    height: auto;
     border-radius: 15px;
     border: 1px solid #d9d9d9;
     margin: 20px auto;
@@ -331,4 +331,7 @@ p{
     font-size: 15px;
     color: rgba(245, 38, 38, 0.842);
     text-align: center;
+    margin-bottom: 20px;
 }
+
+
