--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -147,13 +147,11 @@ header {
 
 
 /* FOOTER */
-.footer{
-    position: relative;
+.pageFooter{
     height: 80px;
     background-color:#232220;
     margin-top: auto;
     text-indent: 15px;
-    bottom: 0%;
     width: 100%;
 }
 .copyrigth{
@@ -174,20 +172,5 @@ header {
 }
 
 
-
-.popupMessage{
-    position: relative;
-    font-family: League Spartan;
-    border-radius: 15px;
-    color:#545454;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #d9d9d9;
-}
-
-.button{
-
-    font-family: League Spartan;
-}
 
 
