--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -109,6 +109,11 @@ td{
     transform: translate(240px,-75px);
 }
 
+.marker2{
+    position: absolute;
+    transform: translate(639px,-75px);
+}
+
 .return{
     display: flex;
     color: white;
@@ -133,3 +138,86 @@ tr:nth-child(even){
 	background-color: #ddd;
 }
 */
+
+.search{
+    margin-top: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.search input{
+    font-family: Helvetica World;
+    font-size: 20px;
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: #232220;
+    border-style: solid;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+
+}
+
+
+.byEmail{
+    width: 400px;
+    height: 45px;
+    padding-left: 20px;
+    padding-right: 10px;
+
+}
+
+.searchBtn{
+    background-color: #2194ff; /*#2194ff*/
+    width: 150px;
+    height: 45px;
+    padding-left: 10px;
+    padding-right: 40px;
+    background-image: url(../../public/img/searchImg.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: 100px;
+    color: white;
+}
+
+.searchBtn:hover{
+    background-color:#3ba0ff; /*#2194ff*/
+}
+
+.clearSearch{
+    color: black;
+    font-family: Helvetica World;
+    font-size: 20px;
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: #232220;
+    border-style: solid;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    text-decoration: none;
+    background-color: #d9d9d9;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.clearSearch:hover{
+    text-decoration: none;
+    background-color:#e0e0e0;
+}
+
+.userName{
+    font-family: League Spartan;
+    text-align: center;
+    font-size: 35px;
+}
+
+.noData{
+    margin-top: 50px;
+    font-family: Helvetica World;
+    text-align: center;
+    font-size: 25px;
+}
