--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -114,6 +114,11 @@ td{
     transform: translate(639px,-75px);
 }
 
+.marker3{
+    position: absolute;
+    transform: translate(440px,-75px);
+}
+
 .return{
     display: flex;
     color: white;
