Feat: tooltips mas importaciones
se agregaron tooltips en html de layout/base para los botones de la barra superior, y otro tooltip en  la vista concerts

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -1,4 +1,5 @@
 /* FUENTES */
+@tailwind utilities; /*agregado iter3- tooltips*/
 @font-face {
     font-family: 'Helvetica World';
     font-style: normal;
