--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -51,9 +51,15 @@
     margin-right: auto;
     justify-content: center;
     display: grid;
-    grid-template-columns: 400px 400px 400px;
+    grid-template-columns: 400px;
     gap: auto;
     margin-top: 40px;
+}
+@media(min-width:768px )
+{
+    .container{
+        grid-template-columns: 400px 400px 400px;
+    }
 }
 
 .container .content {
