--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -91,7 +91,7 @@
     display: inline-block;
     padding: 15px 25px;
     font-size: 30px;
-    cursor: pointer;
+    cursor: not-allowed;
     text-align: center;
     text-decoration: none;
     color: #fff;
