--- a/resources/css/thanks.css
+++ b/resources/css/thanks.css
@@ -65,7 +65,7 @@
 
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: League Spartan;
+    font-family: Helvetica World;
     padding: 15px 15px;
     font-size: 25px;
     cursor: pointer;
