--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,4 +1,4 @@
-@tailwind utilities;
+
 @font-face {
     font-family: 'Helvetica World';
     font-style: normal;
@@ -84,6 +84,10 @@ body{
     font-size: 25px;
 }
 
+.forms{
+    justify-content: center;
+}
+
 
 form .name{
     padding: 0 40px;
@@ -107,7 +111,7 @@ form .name{
     border-width: 1px;
     border-style: solid;
     border-color:#d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -132,7 +136,7 @@ form .email{
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -156,7 +160,7 @@ form .password{
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -215,7 +219,7 @@ form .price{
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -239,7 +243,7 @@ form .stock{
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -264,7 +268,7 @@ form .date{
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
@@ -290,7 +294,7 @@ form .concertName{
     border-width: 1px;
     border-style: solid;
     border-color:#d9d9d9;
-    width: 100%;
+    width: 322px;
     height: 30px;
 }
 
