--- a/resources/css/graphics.css
+++ b/resources/css/graphics.css
@@ -1,8 +1,33 @@
-.chartContainer{
-    height: 1000px;
-    width: 900px;
-    align-content: right;
-    margin-left: 200px;
-    margin-top: 50px;
 
+
+@font-face {
+    font-family: 'League Spartan';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+.chartContainer{
+    height: 600px;
+    width: 600px;
+    margin: 50px auto 50px auto;
+}
+
+.selectBar{
+    height: 45px;
+    width: auto;
+    border-radius: 30px;
+    border-color: #232220;
+    border-width: 2px;
+    font-family: Helvetica World;
+    padding: 0 10px;
+    font-size: 20px;
+    margin-left: 60px;
+}
+.marker{
+    position: absolute;
+    transform: translate(678px,-75px);
+}
+
