--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,33 +1,38 @@
 @tailwind utilities;
 @font-face {
-    font-family: 'Helvetica World';
+    font-family: "Helvetica World";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2)
+        format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
-    font-family: 'League Spartan';
+    font-family: "League Spartan";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2)
+        format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-body{
+body {
     font-family: Helvetica World;
     background-color: white;
-
 }
 
-.forms{
+.forms {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 400px;
     background: white;
     border-radius: 15px;
@@ -37,7 +42,7 @@ body{
     margin-bottom: 30px;
 }
 
-.concertForms{
+.concertForms {
     margin: auto;
     height: auto;
     width: 400px;
@@ -49,7 +54,7 @@ body{
     margin-bottom: 30px;
 }
 
-.logo{
+.logo {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,7 +63,7 @@ body{
     border-top-left-radius: 15px;
 }
 
-.logoNombre{
+.logoNombre {
     font-size: 35px;
     margin-left: 5px;
     font-family: League Spartan;
@@ -66,65 +71,37 @@ body{
     color: white;
 }
 
-.img{
+.img {
     text-align: center;
 }
 
-.forms h2, .concertForms h2{
+.forms h2,
+.concertForms h2 {
     font-family: League Spartan;
     text-align: center;
     margin-top: 5%;
     margin-bottom: 10%;
-
 }
 
-.forms p{
+.forms p {
     text-align: center;
     color: #545454;
     font-size: 25px;
 }
 
-
-form .name{
+form .name {
     padding: 0 40px;
     width: 314px;
     margin: 10px 0;
 }
 
-.name label{
+.name label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-
-
-.name input{
-    margin: 5px 0;
-    left: 50%;
-    text-indent: 10px;
-    border-radius: 20px;
-    border-width: 1px;
-    border-style: solid;
-    border-color:#d9d9d9;
-    width: 100%;
-    height: 30px;
-}
-
-
-form .email{
-    padding: 0 40px;
-    width: 314px;
-    margin: 10px 0;
-}
-
-.email label{
-    margin: 0 13px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.email input{
+.name input {
     margin: 5px 0;
     left: 50%;
     text-indent: 10px;
@@ -136,19 +113,19 @@ form .email{
     height: 30px;
 }
 
-form .password{
+form .email {
     padding: 0 40px;
     width: 314px;
     margin: 10px 0;
 }
 
-.password label{
+.email label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-.password input{
+.email input {
     margin: 5px 0;
     left: 50%;
     text-indent: 10px;
@@ -160,20 +137,44 @@ form .password{
     height: 30px;
 }
 
-.register a{
+form .password {
+    padding: 0 40px;
+    width: 314px;
+    margin: 10px 0;
+}
+
+.password label {
+    margin: 0 13px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.password input {
+    margin: 5px 0;
+    left: 50%;
+    text-indent: 10px;
+    border-radius: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d9d9d9;
+    width: 100%;
+    height: 30px;
+}
+
+.register a {
     margin-left: 13%;
     font-size: 13px;
     color: #545454;
     text-decoration: none;
 }
 
-.register a:hover{
+.register a:hover {
     color: gray;
 }
 
-.store{
+.store {
     margin: 50px 0;
-    transform: translate(90px,0);
+    transform: translate(90px, 0);
     width: 220px;
     height: 50px;
     background: #017aeb;
@@ -181,33 +182,30 @@ form .password{
     border-style: solid;
     border-color: #017aeb;
 
-
     font-family: League Spartan;
     font-size: 23px;
     text-align: center;
     color: white;
-
 }
 
-.store:hover{
-    background-color: #4DA3F4;
-    border-color: #4DA3F4;
+.store:hover {
+    background-color: #4da3f4;
+    border-color: #4da3f4;
 }
 
-
-form .price{
+form .price {
     width: auto;
     padding: 0 40px;
     margin: 10px 0;
 }
 
-.price label{
+.price label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-.price input{
+.price input {
     margin: 5px 0;
     left: 50%;
     text-indent: 10px;
@@ -219,19 +217,19 @@ form .price{
     height: 30px;
 }
 
-form .stock{
+form .stock {
     width: auto;
     padding: 0 40px;
     margin: 10px 0;
 }
 
-.stock label{
+.stock label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-.stock input{
+.stock input {
     margin: 5px 0;
     left: 50%;
     text-indent: 10px;
@@ -243,20 +241,19 @@ form .stock{
     height: 30px;
 }
 
-form .date{
+form .date {
     width: auto;
     padding: 0 40px;
     margin: 10px 0;
 }
 
-.date label{
+.date label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-.date input{
-
+.date input {
     margin: 5px 0;
     left: 50%;
     text-indent: 5px;
@@ -268,68 +265,63 @@ form .date{
     height: 30px;
 }
 
-form .concertName{
+form .concert_name {
     padding: 0 40px;
     width: auto;
     margin: 10px 0;
 }
 
-.concertName label{
+.concert_name label {
     margin: 0 13px;
     font-size: 14px;
     font-weight: bold;
 }
 
-
-
-.concertName input{
+.concert_name input {
     margin: 5px 0;
     left: 50%;
     text-indent: 10px;
     border-radius: 20px;
     border-width: 1px;
     border-style: solid;
-    border-color:#d9d9d9;
+    border-color: #d9d9d9;
     width: 100%;
     height: 30px;
 }
 
-.errorMsg p{
+.errorMsg p {
     font-family: League Spartan;
     font-size: 15px;
     color: rgba(245, 38, 38, 0.842);
     text-align: center;
 }
 
-.confirmMsg{
+.confirmMsg {
     font-family: League Spartan;
     font-size: 15px;
     color: #00c787;
     text-align: center;
 }
 
-.marker{
+.marker {
     position: absolute;
-    transform: translate(440px,-75px);
+    transform: translate(440px, -75px);
 }
 
-.pageFooter{
+.pageFooter {
     position: fixed;
     bottom: 0%;
 }
 
-.popupMessage{
+.popupMessage {
     font-family: League Spartan;
     border-radius: 15px;
-    color:#545454;
+    color: #545454;
     border-width: 1px;
     border-style: solid;
     border-color: #d9d9d9;
 }
 
-.button{
+.button {
     font-family: League Spartan;
 }
-
-
-
