--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -1,46 +1,52 @@
 @font-face {
-    font-family: 'Helvetica World';
+    font-family: "Helvetica World";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/arimo/v28/P5sfzZCDf9_T_3cV7NCUECyoxNk37cxcABrBdwEoaQ.woff2)
+        format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
-    font-family: 'League Spartan';
+    font-family: "League Spartan";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/leaguespartan/v11/kJEnBuEW6A0lliaV_m88ja5Twtx8BWhtkDVmjZvMGYPZA81d.woff2)
+        format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-.recomended{
+.recomended {
     margin-top: 30px;
     font-family: League Spartan;
     text-align: center;
     font-size: 30px;
 }
 
-.concertName{
+.concert_name {
     font-family: League Spartan;
     text-align: center;
     font-size: 25px;
 }
 
-.date{
+.date {
     font-family: Helvetica World;
     text-align: center;
     font-size: 20px;
 }
 
-.price{
+.price {
     font-family: Helvetica World;
     text-align: center;
     font-size: 20px;
 }
-.stock{
+.stock {
     font-family: Helvetica World;
     text-align: center;
     font-size: 20px;
@@ -55,9 +61,8 @@
     gap: auto;
     margin-top: 40px;
 }
-@media(min-width:768px )
-{
-    .container{
+@media (min-width: 768px) {
+    .container {
         grid-template-columns: 400px 400px 400px;
     }
 }
@@ -86,7 +91,9 @@
     border-radius: 40px;
 }
 
-.buttonBuy:hover {background-color: #00d692}
+.buttonBuy:hover {
+    background-color: #00d692;
+}
 
 .buttonBuy:active {
     background-color: #009e6c;
@@ -107,17 +114,17 @@
     border-radius: 40px;
 }
 
-.marker{
+.marker {
     position: absolute;
-    transform: translate(105px,-75px);
+    transform: translate(105px, -75px);
 }
 
-.marker2{
+.marker2 {
     position: absolute;
-    transform: translate(240px,-75px);
+    transform: translate(240px, -75px);
 }
 
-.noConcerts{
+.noConcerts {
     margin-top: 50px;
     text-align: center;
     font-family: Helvetica World;
@@ -125,14 +132,13 @@
     font-weight: normal;
 }
 
-
 /* VISTA CONCIERTOS */
-.search{
+.search {
     display: flex;
     justify-content: center;
 }
 
-.search input{
+.search input {
     font-family: Helvetica World;
     font-size: 20px;
     border-radius: 30px;
@@ -142,18 +148,16 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 20px;
-
 }
 
-
-.byDate{
+.byDate {
     width: 200px;
     height: 40px;
     padding-left: 20px;
     padding-right: 10px;
 }
 
-.searchBtn{
+.searchBtn {
     background-color: #2194ff; /*#2194ff*/
     width: 150px;
     height: 45px;
@@ -166,11 +170,11 @@
     color: white;
 }
 
-.searchBtn:hover{
-    background-color:#3ba0ff; /*#2194ff*/
+.searchBtn:hover {
+    background-color: #3ba0ff; /*#2194ff*/
 }
 
-.clearSearch{
+.clearSearch {
     color: black;
     font-family: Helvetica World;
     font-size: 20px;
@@ -189,24 +193,22 @@
     padding-right: 12px;
 }
 
-.clearSearch:hover{
+.clearSearch:hover {
     text-decoration: none;
-    background-color:#e0e0e0;
+    background-color: #e0e0e0;
 }
 
-.notFoundMsg{
+.notFoundMsg {
     font-family: Helvetica World;
     font-size: 20px;
     text-align: center;
     margin-top: 100px;
 }
 
-.errorMsg{
+.errorMsg {
     font-family: League Spartan;
     font-size: 15px;
     color: rgba(245, 38, 38, 0.842);
     text-align: center;
     margin-bottom: 20px;
 }
-
-
