--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -23,7 +23,7 @@
     font-size: 30px;
 }
 
-.concertName{
+.concert_name{
     font-family: League Spartan;
     text-align: center;
     font-size: 25px;
