--- a/resources/css/graphics.css
+++ b/resources/css/graphics.css
@@ -10,10 +10,13 @@
 }
 
 .chartContainer{
-    height: 600px;
-    width: 600px;
+    justify-items: center;
+    width: 1000px;
+    height: auto;
     margin: 50px auto 50px auto;
 }
+
+
 
 .selectBar{
     height: 45px;
