--- a/resources/css/graphics.css
+++ b/resources/css/graphics.css
@@ -9,14 +9,17 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+.container{
+    overflow: auto;
+}
+
 .chartContainer{
+
     justify-items: center;
     width: 1000px;
     height: auto;
     margin: 50px auto 50px auto;
 }
-
-
 
 .selectBar{
     height: 45px;
@@ -38,5 +41,12 @@
     font-family: Helvetica World;
     font-size: 20px;
     text-align: center;
+}
+
+@media(max-width:1335px )
+{
+    .marker{
+        scale: 0;
+    }
 }
 
