--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -35,7 +35,9 @@
     padding: 18px;
 }
 
+
 table{
+    overflow-x: auto;
     font-family: Helvetica World;
     font-size: 18px;
     text-align: center;
@@ -50,6 +52,7 @@ table{
     border-spacing: 0px;
 }
 
+
 th, td {
     padding: 10px;
 
@@ -57,6 +60,22 @@ th, td {
 
 td{
     border: 1px solid #dddddd;
+}
+
+@media(max-width: 1480px) {
+    /* Para que la tabla se ajuste horizontalmente */
+    .tableContainer {
+      overflow-x: auto;
+    }
+
+    /* Para que los encabezados de la tabla se muestren como columnas */
+    table {
+      display: block;
+    }
+
+    th, td {
+      display: table-cell;
+    }
 }
 
 .errorMsg{
@@ -119,6 +138,21 @@ td{
 .marker3{
     position: absolute;
     transform: translate(440px,-75px);
+}
+
+@media(max-width:1320px )
+{
+    .marker{
+        scale: 0;
+    }
+
+    .marker2{
+        scale: 0;
+    }
+
+    .marker3{
+        scale: 0;
+    }
 }
 
 .return{
@@ -228,4 +262,72 @@ tr:nth-child(even){
     font-family: Helvetica World;
     text-align: center;
     font-size: 20px;
+}
+
+.search2{
+    display: flex;
+    justify-content: center;
+}
+.search2 input{
+    font-family: Helvetica World;
+    font-size: 20px;
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: #232220;
+    border-style: solid;
+}
+.searchBtn2{
+    margin-top: 15px;
+    margin-right: 10px;
+    background-color: #2194ff; /*#2194ff*/
+    width: 80px;
+    height: 45px;
+    background-image: url(../../public/img/searchImg.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: white;
+}
+
+.actions{
+    display: flex;
+    justify-content: center;
+    height: 60px;
+
+}
+
+.clearSearch2{
+    margin-top: 15px;
+    margin-left: 10px;
+    width: 75px;
+    height: 40px;
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: #232220;
+    border-style: solid;
+    text-decoration: none;
+    background-color: #d9d9d9;
+    background-image: url(../../public/img/broom.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+
+
+@media(min-width:892px){
+    .search2{
+        display: none;
+    }
+}
+
+
+@media(max-width:891px) {
+    .search{
+        display: none;
+    }
+    .byEmail{
+        margin-top: 20px;
+    }
 }
